bugfix - ms browsers - set overflow style to scrollbar

--- a/src/alto-ui/Datagrid/Datagrid.scss
+++ b/src/alto-ui/Datagrid/Datagrid.scss
@@ -27,6 +27,7 @@
 .Datagrid__body {
   flex: 1 1 0;
   min-height: 0;
+  -ms-overflow-style: scrollbar;
 }
 
 .Datagrid__head {
